[tool.poetry]
name = "sneakx_backend"
version = "0.1.0"
description = "A backend service for sneakx - a mobile app for commencing sneakers of all kind"
authors = ["DOMINIC MAABOBRA TUOLONG <tuolongdominic@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
firebase-admin = "^6.5.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
